testsuite/tests/grammar/invalid_list/non-list-cls.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    num <- Num(@Number)
    @main_rule main_rule <- ListNode+(num)
}

class ListNode : FooNode {
    @parse_field items: ASTList[FooNode, FooNode]
}

class Num : FooNode implements TokenNode {
}
